Revise DCHECK to consider app-guest WeContents difference.

This CL revises a DCHECK that has been firing (erroneously) when Flash
content is loaded inside a WebView.

Bug: 873672
Change-Id: I75c12c67b47a5b337054a262991d23247bbbb4ea
Reviewed-on: https://chromium-review.googlesource.com/1173359
Reviewed-by: Ehsan Karamad <ekaramad@chromium.org>
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Commit-Queue: James MacLean <wjmaclean@chromium.org>
Cr-Commit-Position: refs/heads/master@{#583232}
Former-commit-id: c2752c91a571d223804bba508aabc6b153101fd2